[gd_scene load_steps=5 format=3 uid="uid://i2hejhsqv13j"]

[ext_resource type="Script" uid="uid://fuckx56jq1ea" path="res://_game/_world/world.gd" id="1_q7m51"]
[ext_resource type="PackedScene" uid="uid://byhkaaxk4y3sd" path="res://_game/_world/pachinko_machine/pachinko_machine.tscn" id="2_3beei"]
[ext_resource type="PackedScene" uid="uid://u1sxubwojqs" path="res://_game/_world/pachinko_ball/pachinko_ball.tscn" id="4_8lvd8"]
[ext_resource type="Script" uid="uid://bpvumthpk8p0c" path="res://_game/_world/balls_in_my_mouth.gd" id="5_m60ro"]

[node name="World" type="Node2D"]
script = ExtResource("1_q7m51")

[node name="Pachinko Machine" parent="." instance=ExtResource("2_3beei")]
position = Vector2(576, 324)

[node name="BallSpawner" type="MultiplayerSpawner" parent="." node_paths=PackedStringArray("ball_spawn_location_root")]
spawn_path = NodePath(".")
script = ExtResource("5_m60ro")
ball_scene = ExtResource("4_8lvd8")
ball_spawn_location_root = NodePath("../Spawn Locations")

[node name="Spawn Locations" type="Node2D" parent="."]

[node name="Node2D" type="Node2D" parent="Spawn Locations"]
position = Vector2(337, 130)

[node name="Node2D2" type="Node2D" parent="Spawn Locations"]
position = Vector2(400, 130)

[node name="Node2D3" type="Node2D" parent="Spawn Locations"]
position = Vector2(471, 133)

[node name="Node2D4" type="Node2D" parent="Spawn Locations"]
position = Vector2(540, 130)

[node name="Node2D5" type="Node2D" parent="Spawn Locations"]
position = Vector2(611, 131)

[node name="Node2D6" type="Node2D" parent="Spawn Locations"]
position = Vector2(679, 131)

[node name="Node2D7" type="Node2D" parent="Spawn Locations"]
position = Vector2(749, 129)

[node name="Node2D8" type="Node2D" parent="Spawn Locations"]
position = Vector2(825, 133)

[node name="UI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2

[node name="SpawnBall" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 269.0
grow_vertical = 0
text = "Spawn New Ball"

[connection signal="server_registered_you" from="." to="UI" method="show"]
[connection signal="ready" from="UI" to="UI" method="hide"]
[connection signal="button_up" from="UI/SpawnBall" to="." method="_on_spawn_ball_button_up"]
